logging/syslog-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syslog
  namespace: logging
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: victoria-logs-single
  ports:
    - protocol: TCP
      port: 514
