logging/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: logging
spec:
  hostnames:
  - victoria.local
  parentRefs:
  - name: homelab
    namespace: nginx-gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  rules:
  - backendRefs:
    - name: victoria-logs-victoria-logs-single-server
      port: 9428
      group: ''	
      kind: Service
